--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: '1.3.0'
+version: '1.4.0'
 history:
+  '1.4.0':
+    date: '2020-03-11'
+    title: Search field focus
+    description: Focus on search field.
   '1.3.0':
     date: '2020-03-01'
     title: Client in method set_table_data
