--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: '1.4.4'
+version: '1.4.5'
 history:
+  '1.4.5':
+    date: '2021-08-19'
+    title: 'Processing'
+    description: 'Change position of processing card at the top of the table. Add class bg-info.'
   '1.4.4':
     date: '2021-06-14'
     title: 'I18N'
