--- a/manifest.yml
+++ b/manifest.yml
@@ -1,62 +1,66 @@
-version: '1.5.1'
+version: 1.5.2
 history:
-  '1.5.1':
+  1.5.2:
+    date: '2022-10-03'
+    title: 'Language'
+    description: 'Does not trying to include language json if wfI18n::getLanguage() not set.'
+  1.5.1:
     date: '2022-08-08'
     title: 'Readme'
     description: 'Readme about reload ajax url.'
-  '1.5.0':
+  1.5.0:
     date: '2022-06-08'
     title: 'Language'
     description: 'Set json param language/url if not set.'
-  '1.4.8':
+  1.4.8:
     date: '2021-12-02'
     title: 'Readme'
     description: 'Readme improvement.'
-  '1.4.7':
+  1.4.7:
     date: '2022-03-29'
     title: 'Readme'
     description: 'Readme improvement about how to reload data.'
-  '1.4.6':
+  1.4.6:
     date: '2021-12-02'
     title: 'Readme'
     description: 'Readme improvement about changing row data.'
-  '1.4.5':
+  1.4.5:
     date: '2021-08-19'
     title: 'Processing'
     description: 'Change position of processing card at the top of the table. Add class bg-info.'
-  '1.4.4':
+  1.4.4:
     date: '2021-06-14'
     title: 'I18N'
     description: 'Add I18N files form sv.json (copy of Swedish.json), en.json, lt.json.'
-  '1.4.3':
+  1.4.3:
     date: '2021-06-09'
     title: 'Readme'
     description: 'Add Javascript example to readme.'
-  '1.4.2':
+  1.4.2:
     date: '2020-10-27'
     title: 'Map file'
     description: 'Remove inclusion of pdfmake.min.js.map.'
-  '1.4.1':
+  1.4.1:
     date: '2020-04-20'
     title: Readme
     description: How to make table responsive.
-  '1.4.0':
+  1.4.0:
     date: '2020-03-11'
     title: Search field focus
     description: Focus on search field.
-  '1.3.0':
+  1.3.0:
     date: '2020-03-01'
     title: Client in method set_table_data
     description: Return param client to verify if user has sign in.
-  '1.2.0':
+  1.2.0:
     date: '2020-01-29'
     title: Export buttons
     description: Make export buttons smaller.
-  '1.1.0':
+  1.1.0:
     date: '2020-01-29'
     title: Json data
     description: Improved method to handel json data.
-  '1.0.0':
+  1.0.0:
     date: '2019-03-09'
     title: Manifest
     description: 'Manifest created.'
