--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.5.4
+version: 1.5.5
 history:
+  1.5.5:
+    date: '2023-05-29'
+    title: 'Processing'
+    description: 'Move style to put processing card at top of page.'
   1.5.4:
     date: '2022-12-20'
     title: 'Empty data'
